css/layout_frame.css
.clear {
    clear: both;
}

.container {
    margin: 0 auto;
    max-width: 1400px;
    width: 100%;
}

/* HEADER */

#site_header_name {
    z-index: 100;
    position: fixed;
    top: 10px;
    right: 36px;
    font-size: 27px;
    color: #FFF;
}

#site_header_ruby {
    z-index: 100;
    position: fixed;
    top: 550px;
    right: 92.5px;
    max-width: 65px;
    width: 100%;
}

.mobile_nav_button {
    z-index: 99;
    position: fixed;
    top: 20px;
    right: 20px;
    width: 40px;
    height: 40px;
    cursor: pointer;
}

#nav {
    display: none;
    z-index: 99;
    background: rgba(0,0,0,.8);
    position: fixed;
    right: 0;
    max-width: 250px;
    width: 0;
    height: 100%;
    border-left: 1px solid #000;
}

a {
    text-decoration: none;
}

.nav_tabs {
    display: block;
    position: relative;
    top: 200px;
    padding: 18px 25px 18px 25px;
    text-align: center;
    font-family: Verdana, Arial, Sans-serif;
    font-size: 20px;
    color: #FFF;
    -webkit-transition: all .4s ease-in-out;
    -moz-transition: all .4s ease-in-out;
    -o-transition: all .4s ease-in-out;
    transition: all .4s ease-in-out;
    -webkit-transition: translate3d(0,0,0);
}

.nav_tabs:hover {
    border-right: 3px solid rgb(238,1,2);
    border-left: 3px solid rgb(238,1,2);
    -webkit-transition: all .4s ease-in-out;
    -moz-transition: all .4s ease-in-out;
    -o-transition: all .4s ease-in-out;
    transition: all .4s ease-in-out;
    -webkit-transition: translate3d(0,0,0);
}

#close_btn {
    position: absolute;
    bottom: 10px;
    left: 104px;
    right: 104px;
    font-family: Verdana, Arial, Sans-serif;
    font-size: 15px;
    color: #FFF;
    cursor: pointer;
}

#close_btn:hover {
    color: #EE0102;
}

/* FOOTER */

#footer {
    background: url(../images/site_footer_bg.jpg) repeat-x bottom;
    height: 78px;
}

#sig {
    float: left;
    margin-left: 20px;
    padding-top: 30px; 
    color: #000;
    font-family: Verdana, Arial, Sans-serif;
    font-size: 15px;
    text-align: center;
}

#footer_logo {   
    float: right;
    max-width: 90px;
    max-height: 90px;
    margin-top: -9px;
}

/* MEDIA QUERIES */


@media only screen and (max-width: 960px) {

    #sig {
        margin-left: 0;
    }

    #footer .container {
        max-width: 960px;
    }
}

@media only screen and (max-width: 600px) {

    #site_header_name {
        width: auto;
        max-width: 100%;
        min-height: 30px;
        height: 100%;
        visibility: visible;
    }

    #footer_logo {
        max-width: 85px;
        max-height: 85px;
        margin-right: -3px;
    }
}

@media only screen and (max-width: 399px) {

    #footer_logo {
        display: none;
    }

    #sig {
        float: none;        
    }
}

